--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source website maker</a></section><section class="menu cid-s4GjAmYlCk" once="menu" id="menu1-m">
+<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="menu cid-s4GjAmYlCk" once="menu" id="menu1-m">
 
     
 
@@ -245,7 +245,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/-73-510x382.png" alt="" title="">
+                    <img src="assets/images/-7-510x382.png" alt="" title="">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
