create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">how to make your own website</a></section><section class="menu cid-s4GjAmYlCk" once="menu" id="menu1-m">
+<section class="engine"><a href="https://mobirise.ws/p">open source website creator</a></section><section class="menu cid-s4GjAmYlCk" once="menu" id="menu1-m">
 
     
 
